--- a/apps/root-app.yaml
+++ b/apps/root-app.yaml
@@ -9,6 +9,8 @@ spec:
         repoURL: git@github.com:nourez/klusty-krab-home-lab.git
         targetRevision: HEAD
         path: apps
+        directory:
+            recurse: true
     destination:
         server: https://kubernetes.default.svc
         namespace: argocd
