Add placeholder application and ConfigMap for ArgoCD deployment

--- a/apps/placeholder-app.yaml
+++ b/apps/placeholder-app.yaml
@@ -8,7 +8,7 @@ spec:
     source:
         repoURL: git@github.com:nourez/klusty-krab-home-lab.git
         targetRevision: HEAD
-        path: apps/placeholder
+        path: manifests/placeholder
         directory:
             recurse: true
     destination:
