--- a/apps/longhorn-app.yaml
+++ b/apps/longhorn-app.yaml
@@ -3,31 +3,19 @@ kind: Application
 metadata:
     name: longhorn
     namespace: argocd
-    annotations:
-        argocd.argoproj.io/sync-wave: "1"
 spec:
+    syncPolicy:
+        syncOptions:
+            - CreateNamespace=true
     project: default
-    source:
-        repoURL: https://charts.longhorn.io
-        chart: longhorn
-        targetRevision: 1.9.0
-        helm:
-            values: |
-                persistence:
-                  defaultClass: true
-                  defaultClassReplicaCount: 1
-                csi:
-                  kubeletRootDir: /var/lib/kubelet
-                serviceAccount:
-                  annotations:
-                    argocd.argoproj.io/hook: Sync
-                    argocd.argoproj.io/sync-wave: "-1"
+    sources:
+        - chart: longhorn
+          repoURL: https://charts.longhorn.io/
+          targetRevision: v1.9.0 # Replace with the Longhorn version you'd like to install or upgrade to
+          helm:
+              values: |
+                  preUpgradeChecker:
+                    jobEnabled: false
     destination:
         server: https://kubernetes.default.svc
         namespace: longhorn-system
-    syncPolicy:
-        automated:
-            selfHeal: true
-            prune: true
-        syncOptions:
-            - CreateNamespace=true
