Enable automated sync with self-heal and prune options for Longhorn application in ArgoCD configuration.

--- a/apps/longhorn-app.yaml
+++ b/apps/longhorn-app.yaml
@@ -5,6 +5,9 @@ metadata:
     namespace: argocd
 spec:
     syncPolicy:
+        automated:
+            selfHeal: true
+            prune: true
         syncOptions:
             - CreateNamespace=true
     project: default
