Disable selfHeal for Longhorn

--- a/apps/longhorn-app.yaml
+++ b/apps/longhorn-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
     syncPolicy:
         automated:
-            selfHeal: true
+            # selfHeal disabled - Longhorn modifies CRDs at runtime, selfHeal causes unnecessary sync noise
             prune: true
         syncOptions:
             - CreateNamespace=true
