Rename Longhorn application from 'longhorn' to 'longhorn2' in ArgoCD configuration.

--- a/apps/longhorn-storage-app.yaml
+++ b/apps/longhorn-storage-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-    name: longhorn
+    name: longhorn2
     namespace: argocd
 spec:
     syncPolicy:
