--- a/apps/longhorn-app.yaml
+++ b/apps/longhorn-app.yaml
@@ -28,48 +28,62 @@ spec:
           kind: CustomResourceDefinition
           name: engineimages.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: engines.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: instancemanagers.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: nodes.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: replicas.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: settings.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
         - group: apiextensions.k8s.io
           kind: CustomResourceDefinition
           name: volumes.longhorn.io
           jsonPointers:
-              - /spec/conversion
+              - /spec
               - /metadata/generation
               - /metadata/resourceVersion
+              - /metadata/managedFields
+              - /status
