--- a/apps/longhorn-app.yaml
+++ b/apps/longhorn-app.yaml
@@ -18,8 +18,12 @@ spec:
           targetRevision: v1.9.0 # Replace with the Longhorn version you'd like to install or upgrade to
           helm:
               values: |
+                  persistence:
+                    defaultClass: true
+                    defaultReplicaCount: 1
                   preUpgradeChecker:
                     jobEnabled: false
+
     destination:
         server: https://kubernetes.default.svc
         namespace: longhorn-system
