--- a/apps/metallb-app.yaml
+++ b/apps/metallb-app.yaml
@@ -5,18 +5,13 @@ metadata:
     namespace: argocd
 spec:
     project: default
-    source:
-        repoURL: https://metallb.github.io/metallb
-        chart: metallb
-        targetRevision: 0.15.2
-        helm:
-            values: |
-                configInline:
-                  address-pools:
-                    - name: default
-                      protocol: layer2
-                      addresses:
-                        - 10.0.0.225-10.0.0.250
+    sources:
+        - repoURL: https://metallb.github.io/metallb
+          chart: metallb
+          targetRevision: 0.15.2
+        - repoURL: https://github.com/nourezrawji/klusty-krab-home-lab.git
+          targetRevision: HEAD
+          path: manifests/metallb
     destination:
         server: https://kubernetes.default.svc
         namespace: metallb-system
