Use the correct URL for github instead of vibecoding it.

--- a/apps/metallb-app.yaml
+++ b/apps/metallb-app.yaml
@@ -9,7 +9,7 @@ spec:
         - repoURL: https://metallb.github.io/metallb
           chart: metallb
           targetRevision: 0.15.2
-        - repoURL: https://github.com/nourezrawji/klusty-krab-home-lab.git
+        - repoURL: git@github.com:nourez/klusty-krab-home-lab.git
           targetRevision: HEAD
           path: manifests/metallb
     destination:
