--- a/apps/metallb-app.yaml
+++ b/apps/metallb-app.yaml
@@ -12,6 +12,8 @@ spec:
         - repoURL: git@github.com:nourez/klusty-krab-home-lab.git
           targetRevision: HEAD
           path: manifests/metallb
+          directory:
+              recurse: true
     destination:
         server: https://kubernetes.default.svc
         namespace: metallb-system
