--- a/manifests/metallb/metallb-crds.yaml
+++ b/manifests/metallb/metallb-crds.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-    name: default
+    name: home-lab-pool
     namespace: metallb-system
 spec:
     addresses:
@@ -10,8 +10,8 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-    name: default
+    name: home-lab-l2
     namespace: metallb-system
 spec:
     ipAddressPools:
-        - default
+        - home-lab-pool
