Add access mode settings for persistence in Adguard values.yaml to ensure proper storage management.

--- a/manifests/adguard/values.yaml
+++ b/manifests/adguard/values.yaml
@@ -1,10 +1,12 @@
 persistence:
     config:
         enabled: true
+        accessMode: ReadWriteOnce
         storageClass: longhorn
         size: 2Gi
     data:
         enabled: true
+        accessMode: ReadWriteOnce
         storageClass: longhorn
         size: 5Gi
 
