Update Adguard application configuration: change Helm chart source to OCI format and modify target revision to wildcard for flexibility in version management.

--- a/apps/adguard-app.yaml
+++ b/apps/adguard-app.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
     project: default
     sources:
-        - repoURL: https://charts.truecharts.org/
+        - repoURL: oci://tccr.io/truecharts
           chart: adguard-home
-          targetRevision: 11.5.7
+          targetRevision: "*"
           helm:
               valueFiles:
                   - $values/manifests/adguard/values.yaml
