Add accessMode to persistence for gabe565 chart

--- a/manifests/adguard/values.yaml
+++ b/manifests/adguard/values.yaml
@@ -26,10 +26,12 @@ service:
 persistence:
     config:
         enabled: true
+        accessMode: ReadWriteOnce
         storageClass: longhorn
         size: 2Gi
     data:
         enabled: true
+        accessMode: ReadWriteOnce
         storageClass: longhorn
         size: 5Gi
 
