Switch to rm3l AdGuard Home chart - much simpler and more reliable

--- a/apps/adguard-app.yaml
+++ b/apps/adguard-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
     project: default
     source:
-        repoURL: ghcr.io/gabe565/charts
+        repoURL: https://helm-charts.rm3l.org
         chart: adguard-home
         targetRevision: "*"
         helm:
