--- a/manifests/adguard/values.yaml
+++ b/manifests/adguard/values.yaml
@@ -1,43 +1,18 @@
-# Minimal configuration for gabe565 AdGuard Home chart
+# Configuration for rm3l AdGuard Home chart
 env:
     TZ: "America/Toronto"
 
 service:
-    main:
-        ports:
-            http:
-                port: 3000
-    dns-tcp:
-        enabled: true
-        type: LoadBalancer
-        loadBalancerIP: 10.0.0.241
-        ports:
-            dns-tcp:
-                port: 53
-                protocol: TCP
-    dns-udp:
-        enabled: true
-        type: LoadBalancer
-        loadBalancerIP: 10.0.0.241
-        ports:
-            dns-udp:
-                port: 53
-                protocol: UDP
+    type: LoadBalancer
+    loadBalancerIP: 10.0.0.241
 
 persistence:
-    config:
-        enabled: true
-        accessMode: ReadWriteOnce
-        storageClass: longhorn
-        size: 2Gi
-    data:
-        enabled: true
-        accessMode: ReadWriteOnce
-        storageClass: longhorn
-        size: 5Gi
+    enabled: true
+    storageClass: longhorn
+    size: 5Gi
 
 # AdGuard Home configuration
-config: |
+config:
     dns:
         upstream_dns:
             - 1.1.1.1
