Add explicit TCP/UDP port configuration for DNS service

--- a/manifests/adguard/values.yaml
+++ b/manifests/adguard/values.yaml
@@ -8,6 +8,10 @@ services:
         type: LoadBalancer
         loadBalancerIP: 10.0.0.241
         externalTrafficPolicy: Local
+        tcp:
+            port: 53
+        udp:
+            port: 53
 
 persistence:
     volumeClaimSpec:
