--- a/manifests/adguard/adguard-pv-pvc.yaml
+++ b/manifests/adguard/adguard-pv-pvc.yaml
@@ -9,6 +9,7 @@ spec:
     accessModes:
         - ReadWriteOnce
     persistentVolumeReclaimPolicy: Retain
+    storageClassName: longhorn
     hostPath:
         path: "/mnt/data/adguard"
 ---
