--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -23,12 +23,12 @@ spec:
                       limits:
                           memory: "512Mi"
                           cpu: "500m"
-                  env:
-                      - name: AGH_CONFIG
-                        valueFrom:
-                            configMapKeyRef:
-                                name: adguard-config
-                                key: AdGuardHome.yaml
+                  # env:
+                  #     - name: AGH_CONFIG
+                  #       valueFrom:
+                  #           configMapKeyRef:
+                  #               name: adguard-config
+                  #               key: AdGuardHome.yaml
                   ports:
                       - containerPort: 53 #dns
                         name: dns
