--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -13,6 +13,22 @@ spec:
             labels:
                 app: adguard
         spec:
+            initContainers:
+                - name: config-init
+                  image: busybox:1.35
+                  command:
+                      - sh
+                      - -c
+                      - |
+                          echo "Applying ConfigMap as source of truth..."
+                          cp /tmp/config/AdGuardHome.yaml /opt/adguardhome/work/AdGuardHome.yaml
+                          echo "ConfigMap applied successfully - any web UI changes will be lost on restart"
+                  volumeMounts:
+                      - name: adguard-data
+                        mountPath: /opt/adguardhome/work
+                      - name: adguard-config
+                        mountPath: /tmp/config
+                        readOnly: true
             containers:
                 - name: adguard-home
                   image: adguard/adguardhome:latest
@@ -35,9 +51,6 @@ spec:
                   volumeMounts:
                       - name: adguard-data
                         mountPath: /opt/adguardhome/work
-                      - name: adguard-config
-                        mountPath: /opt/adguardhome/conf
-                        readOnly: true
             volumes:
                 - name: adguard-data
                   persistentVolumeClaim:
