Refactor AdGuard deployment by removing initContainers and directly referencing ConfigMap for configuration

--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -13,24 +13,6 @@ spec:
             labels:
                 app: adguard
         spec:
-            initContainers:
-                - name: config-init
-                  image: busybox:1.35
-                  command:
-                      - sh
-                      - -c
-                      - |
-                          echo "Applying ConfigMap as source of truth..."
-                          cp /tmp/config/AdGuardHome.yaml /opt/adguardhome/work/AdGuardHome.yaml
-                          chown 65534:65534 /opt/adguardhome/work/AdGuardHome.yaml
-                          chmod 600 /opt/adguardhome/work/AdGuardHome.yaml
-                          echo "ConfigMap applied successfully with correct permissions - any web UI changes will be lost on restart"
-                  volumeMounts:
-                      - name: adguard-data
-                        mountPath: /opt/adguardhome/work
-                      - name: adguard-config
-                        mountPath: /tmp/config
-                        readOnly: true
             containers:
                 - name: adguard-home
                   image: adguard/adguardhome:latest
@@ -41,6 +23,12 @@ spec:
                       limits:
                           memory: "512Mi"
                           cpu: "500m"
+                  env:
+                      - name: AGH_CONFIG
+                        valueFrom:
+                            configMapKeyRef:
+                                name: adguard-config
+                                key: AdGuardHome.yaml
                   ports:
                       - containerPort: 53 #dns
                         name: dns
@@ -57,6 +45,3 @@ spec:
                 - name: adguard-data
                   persistentVolumeClaim:
                       claimName: adguard-pvc
-                - name: adguard-config
-                  configMap:
-                      name: adguard-config
