Enhance AdGuard deployment by adding a read-only configuration volume from ConfigMap for improved management of settings

--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -41,7 +41,13 @@ spec:
                   volumeMounts:
                       - name: adguard-data
                         mountPath: /opt/adguardhome/work
+                      - name: adguard-config
+                        mountPath: /opt/adguardhome/conf
+                        readOnly: true
             volumes:
                 - name: adguard-data
                   persistentVolumeClaim:
                       claimName: adguard-pvc
+                - name: adguard-config
+                  configMap:
+                      name: adguard-config
