init container to merge configmap

--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -13,6 +13,43 @@ spec:
             labels:
                 app: adguard
         spec:
+            initContainers:
+                - name: config-merger
+                  image: mikefarah/yq:4
+                  command:
+                      - sh
+                      - -c
+                      - |
+                          echo "Merging ConfigMap DNS rewrites into existing AdGuard config..."
+
+                          # Check if AdGuard config exists
+                          if [ -f /opt/adguardhome/work/AdGuardHome.yaml ]; then
+                            echo "Existing config found, merging DNS rewrites..."
+                            
+                            # Backup original
+                            cp /opt/adguardhome/work/AdGuardHome.yaml /opt/adguardhome/work/AdGuardHome.yaml.backup
+                            
+                            # Merge DNS rewrites from ConfigMap
+                            yq eval-all '. as $item ireduce ({}; . * $item)' \
+                              /opt/adguardhome/work/AdGuardHome.yaml \
+                              /tmp/config/AdGuardHome.yaml > /tmp/merged.yaml
+                            
+                            # Replace the config with merged version
+                            cp /tmp/merged.yaml /opt/adguardhome/work/AdGuardHome.yaml
+                            chown 65534:65534 /opt/adguardhome/work/AdGuardHome.yaml
+                            
+                            echo "DNS rewrites merged successfully"
+                          else
+                            echo "No existing config, copying ConfigMap as base..."
+                            cp /tmp/config/AdGuardHome.yaml /opt/adguardhome/work/AdGuardHome.yaml
+                            chown 65534:65534 /opt/adguardhome/work/AdGuardHome.yaml
+                          fi
+                  volumeMounts:
+                      - name: adguard-data
+                        mountPath: /opt/adguardhome/work
+                      - name: adguard-config
+                        mountPath: /tmp/config
+                        readOnly: true
             containers:
                 - name: adguard-home
                   image: adguard/adguardhome:latest
@@ -23,12 +60,6 @@ spec:
                       limits:
                           memory: "512Mi"
                           cpu: "500m"
-                  env:
-                      - name: AGH_CONFIG
-                        valueFrom:
-                            configMapKeyRef:
-                                name: adguard-config
-                                key: AdGuardHome.yaml
                   ports:
                       - containerPort: 53 #dns
                         name: dns
@@ -45,3 +76,6 @@ spec:
                 - name: adguard-data
                   persistentVolumeClaim:
                       claimName: adguard-pvc
+                - name: adguard-config
+                  configMap:
+                      name: adguard-config
