--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -16,6 +16,9 @@ spec:
             initContainers:
                 - name: config-merger
                   image: mikefarah/yq:4
+                  securityContext:
+                      runAsUser: 0
+                      runAsGroup: 0
                   command:
                       - sh
                       - -c
@@ -26,23 +29,25 @@ spec:
                           if [ -f /opt/adguardhome/work/AdGuardHome.yaml ]; then
                             echo "Existing config found, merging DNS rewrites..."
                             
-                            # Backup original
-                            cp /opt/adguardhome/work/AdGuardHome.yaml /opt/adguardhome/work/AdGuardHome.yaml.backup
+                            # Create backup with proper permissions
+                            cp /opt/adguardhome/work/AdGuardHome.yaml /tmp/original.yaml
                             
-                            # Merge DNS rewrites from ConfigMap
-                            yq eval-all '. as $item ireduce ({}; . * $item)' \
-                              /opt/adguardhome/work/AdGuardHome.yaml \
+                            # Merge DNS rewrites from ConfigMap into existing config
+                            yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' \
+                              /tmp/original.yaml \
                               /tmp/config/AdGuardHome.yaml > /tmp/merged.yaml
                             
-                            # Replace the config with merged version
+                            # Replace the config with merged version and fix permissions
                             cp /tmp/merged.yaml /opt/adguardhome/work/AdGuardHome.yaml
-                            chown 65534:65534 /opt/adguardhome/work/AdGuardHome.yaml
+                            chown -R 65534:65534 /opt/adguardhome/work/AdGuardHome.yaml
+                            chmod 644 /opt/adguardhome/work/AdGuardHome.yaml
                             
                             echo "DNS rewrites merged successfully"
                           else
                             echo "No existing config, copying ConfigMap as base..."
                             cp /tmp/config/AdGuardHome.yaml /opt/adguardhome/work/AdGuardHome.yaml
                             chown 65534:65534 /opt/adguardhome/work/AdGuardHome.yaml
+                            chmod 644 /opt/adguardhome/work/AdGuardHome.yaml
                           fi
                   volumeMounts:
                       - name: adguard-data
