--- a/apps/longhorn-app.yaml
+++ b/apps/longhorn-app.yaml
@@ -23,7 +23,11 @@ spec:
                     defaultReplicaCount: 1
                   preUpgradeChecker:
                     jobEnabled: false
-
+        - repoURL: git@github.com:nourez/klusty-krab-home-lab.git
+          targetRevision: HEAD
+          path: manifests/longhorn
+          directory:
+              recurse: true
     destination:
         server: https://kubernetes.default.svc
         namespace: longhorn-system
