don't use longhorn for roms

--- a/manifests/roms/roms-pv-pvc.yaml
+++ b/manifests/roms/roms-pv-pvc.yaml
@@ -16,6 +16,7 @@ metadata:
     name: roms-pvc
     namespace: roms
 spec:
+    storageClassName: ""
     accessModes:
         - ReadWriteMany
     resources:
