Cleaned up repo to make it clear that reference scripts aren't running in the cluster.

--- a/apps/intel-gpu-dependencies.yaml
+++ b/apps/intel-gpu-dependencies.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
     project: default
     source:
-        repoURL: https://github.com/nourezrawji/klusty-krab-home-lab.git # Update with your repo URL
+        repoURL: https://github.com/nourezrawji/klusty-krab-home-lab.git
         targetRevision: HEAD
         path: manifests/intel-gpu-dependencies
     destination:
