use SSH to access repo instead of http

--- a/apps/intel-gpu-dependencies.yaml
+++ b/apps/intel-gpu-dependencies.yaml
@@ -8,9 +8,11 @@ metadata:
 spec:
     project: default
     source:
-        repoURL: https://github.com/nourezrawji/klusty-krab-home-lab.git
+        repoURL: git@github.com:nourez/klusty-krab-home-lab.git
         targetRevision: HEAD
         path: manifests/intel-gpu-dependencies
+        directory:
+            recurse: true
     destination:
         server: https://kubernetes.default.svc
         namespace: kube-system
