--- a/apps/intel-gpu-plugin.yaml
+++ b/apps/intel-gpu-plugin.yaml
@@ -18,7 +18,7 @@ spec:
         namespace: intel-device-plugins-system
     syncPolicy:
         automated:
-            prune: true
+            prune: false
             selfHeal: true
         syncOptions:
             - CreateNamespace=true
