--- a/manifests/intel-gpu-dependencies/cert-manager-helm-release.yaml
+++ b/manifests/intel-gpu-dependencies/cert-manager-helm-release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.cattle.io/v1
 kind: HelmChart
 metadata:
-    name: cert-manager-argocd
+    name: cert-manager
     namespace: kube-system
     annotations:
         argocd.argoproj.io/sync-wave: "1"
