--- a/manifests/intel-gpu-dependencies/nfd-helm-release.yaml
+++ b/manifests/intel-gpu-dependencies/nfd-helm-release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.cattle.io/v1
 kind: HelmChart
 metadata:
-    name: node-feature-discovery-argocd
+    name: node-feature-discovery
     namespace: kube-system
     annotations:
         argocd.argoproj.io/sync-wave: "1"
