Update Plex app configuration in ArgoCD: change repoURL and specify chart name

--- a/apps/plex-app.yaml
+++ b/apps/plex-app.yaml
@@ -12,7 +12,8 @@ spec:
             - CreateNamespace=true
     project: default
     source:
-        repoURL: oci://ghcr.io/gabe565/charts/plex
+        repoURL: oci://ghcr.io/gabe565/charts
+        chart: plex
         targetRevision: 1.5.1
         helm:
             valueFiles:
