Add GHCR OCI repository secret for ArgoCD and update Plex app repoURL

--- a/apps/plex-app.yaml
+++ b/apps/plex-app.yaml
@@ -12,7 +12,7 @@ spec:
             - CreateNamespace=true
     project: default
     source:
-        repoURL: oci://ghcr.io/gabe565/charts
+        repoURL: ghcr.io/gabe565/charts
         chart: plex
         targetRevision: 1.5.1
         helm:
